<resources>
    <string name="app_name">UMA Wallet</string>
    <string name="click_back_to_exit">Press back again to exit</string>
    <string name="msg_please_wait">Please wait..</string>
    <string name="login">Login</string>
    <string name="new_user">New User</string>
    <string name="hint_email">Enter email</string>
    <string name="forget_password">Forget Password</string>
    <string name="hint_password">Enter password</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="register">Register</string>
    <string name="hint_name">Enter name</string>
    <string name="hint_confirm_password">Enter Confirm password</string>
    <string name="hint_ethreum_address">Enter ethereum address</string>
    <string name="hint_ethreum_key">Enter ethereum public key</string>
    <string name="enter_ethreum_key">Please enter ethereum public key</string>
    <string name="hint_nick_name">Enter nick name</string>
    <string name="or">OR</string>
    <string name="edu_token">EduStar Lite</string>
    <string name="edu_classic_token">EduStar Classic</string>
    <string name="etherm_detail">Add Ethereum Wallet Detail (optional)</string>
    <string name="etherm_wallet">Ethereum Wallet</string>
    <string name="err_pass_not_match">passwords not matched.</string>
    <string name="submit">Submit</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="states">Statistics</string>
    <string name="hint_adhar_number">Enter Aadhar Number</string>
    <string name="err_no_internet_connection">No internet connected.</string>
    <string name="permission_denied_title">Permission denied</string>
    <string name="err_something_went_wrong">Something went wrong.</string>
    <string name="errr_choose_one">Please enter either Ethereum wallet address or public key</string>
    <string name="errr_enter_address">Please enter either Ethereum wallet address</string>
    <string name="errr_enter_adhar">Please enter adhar number</string>
    <string name="set_old_pass">Enter old password</string>
    <string name="this_feature_under_dev">This Feature is Under Developement will available in future releases.</string>
    <string name="set_new_pass">Enter new password</string>
    <string name="entered_wrong_pass">Entered old password is wrong.</string>
    <string name="password_not_be_same">Old password and new password can not be same.</string>
    <string name="err_please_enter_nick_name">Please enter nick name</string>
    <string name="hint_password_old">Enter old password</string>
    <string name="change_password">Change Password</string>
    <string name="change_currency">Change Currency</string>
    <string name="update_email">Update Email</string>
    <string name="my_profile">My Profile</string>
    <string name="rs_symbol">\u20B9</string>
    <string name="dolor_symbol">$</string>
    <string name="transaction_detail">Transaction Details</string>
    <string name="logout">Logout</string>
    <string name="set_new_confirm">Enter new confirm password</string>
    <string name="no_transactions_found">No Transactions Found.</string>
    <string name="no_transactions_found_home">No Transactions Found.\nFor Adding a new wallet press on <b>Settings</b> bottom tab and navigate to <b>Wallets</b> Tab.</string>
    <string name="update_profile">Update Profile</string>
    <string name="wallet">Wallets</string>
    <string name="add_new_wallet">Add Wallet</string>
    <string name="edit_wallet">Edit Wallet Detail</string>
    <string name="err_valied_adhar">Please enter valid adhar number.</string>
    <string name="err_mandatory">While adding a wallet all fields are mandatory</string>
    <string name="select_nick_name">Select wallet nickname</string>
    <string name="token_transfer">Tokens Transfer</string>
    <string name="select_token">Select Token</string>
</resources>
