<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_10">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="@dimen/height_4"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardElevation="@dimen/padding_3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <com.umawallet.custom.TfTextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/padding_8"
                        android:text="@string/update_email"
                        android:textColor="@color/colorPrimaryDark"
                        card_view:ftype="bold"
                        android:textSize="@dimen/text_size_16" />

                    <com.umawallet.custom.MyEditTextWithCloseBtn
                        android:id="@+id/edtEmail"
                        style="@style/signup_et"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_40"
                        android:layout_marginTop="@dimen/padding_12"
                        android:background="@drawable/blue_border_blue_bg"
                        android:gravity="center"
                        android:hint="@string/hint_email"
                        android:imeOptions="actionDone"
                        android:inputType="textEmailAddress"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size_14" />
                    <com.umawallet.custom.MyEditTextWithCloseBtn
                        android:id="@+id/edtName"
                        android:visibility="gone"
                        style="@style/signup_et"
                        android:layout_marginTop="@dimen/padding_12"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_40"
                        android:background="@drawable/blue_border_blue_bg"
                        android:gravity="center|left"
                        android:hint="@string/hint_name"
                        android:imeOptions="actionDone"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size_14" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/height_20"
                    android:layout_marginRight="@dimen/margin_25"
                    android:layout_marginTop="@dimen/padding_10"
                    android:orientation="vertical">

                    <com.umawallet.custom.TfTextView
                        android:id="@+id/txtSubmit"
                        android:layout_width="@dimen/padding_100"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/padding_6"
                        android:padding="@dimen/padding_8"
                        android:background="@drawable/corner_et_bg"
                        android:gravity="center"
                        android:text="@string/submit"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_14"
                        />



                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>

</LinearLayout>