<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/padding_8">
<ScrollView
    android:layout_width="match_parent"
    android:scrollbars="none"
    android:fadingEdge="none"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <com.umawallet.custom.TfTextView
            android:id="@+id/tv_profile"
            style="@style/left_menu_tv_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_5"
            android:drawableLeft="@drawable/ic_user"
            android:drawablePadding="@dimen/height_20"
            android:drawableTint="@color/black"
            android:gravity="center|left"
            android:text="@string/my_profile"
            app:ftype="regular" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/height_2"
            android:background="@color/grey_dark" />

        <com.umawallet.custom.TfTextView
            android:id="@+id/tv_change_password"
            style="@style/left_menu_tv_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_5"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="@dimen/height_20"
            android:drawableTint="@color/black"
            android:gravity="center|left"
            android:text="@string/change_password"
            app:ftype="regular" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/height_2"
            android:background="@color/grey_dark" />

        <com.umawallet.custom.TfTextView
            android:id="@+id/tv_change_currency"
            style="@style/left_menu_tv_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_5"
            android:drawableLeft="@drawable/ic_coins"
            android:drawablePadding="@dimen/height_20"
            android:gravity="center|left"
            android:text="@string/change_currency"
            app:ftype="regular" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/height_2"
            android:background="@color/grey_dark" />

        <android.support.v7.widget.CardView
            android:visibility="gone"
            android:id="@+id/cardViewCurrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/grey"
            app:cardCornerRadius="8dp"
            app:contentPadding="@dimen/padding_6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rlINr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp">

                    <CheckBox
                        android:id="@+id/chkINR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true" />

                    <com.umawallet.custom.TfTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_toEndOf="@+id/chkINR"
                        android:text="INR"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_14" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/height_2"
                    android:background="@color/grey_dark" />

                <RelativeLayout
                    android:id="@+id/rlDollor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp">

                    <CheckBox
                        android:id="@+id/chkDollor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true" />

                    <com.umawallet.custom.TfTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_toEndOf="@+id/chkDollor"
                        android:text="US Dollor"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_14" />

                </RelativeLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>
        <com.umawallet.custom.TfTextView
            android:id="@+id/tv_update_email"
            style="@style/left_menu_tv_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_5"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="@dimen/height_20"
            android:drawableTint="@color/black"
            android:gravity="center|left"
            android:text="@string/update_email"
            app:ftype="regular" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/height_2"
            android:background="@color/grey_dark" />
        <com.umawallet.custom.TfTextView
            android:id="@+id/tv_wallet"
            style="@style/left_menu_tv_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_5"
            android:drawableLeft="@drawable/ic_wallet"
            android:drawablePadding="@dimen/height_20"
            android:drawableTint="@color/black"
            android:gravity="center|left"
            android:text="@string/wallet"
            app:ftype="regular" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/height_2"
            android:background="@color/grey_dark" />

        <com.umawallet.custom.TfTextView
            android:id="@+id/tv_logout"
            style="@style/left_menu_tv_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_5"
            android:drawableLeft="@drawable/ic_logout"
            android:drawablePadding="@dimen/height_20"
            android:drawableTint="@color/black"
            android:gravity="center|left"
            android:text="@string/logout"
            app:ftype="regular" />

        <com.umawallet.custom.TfTextView
            android:visibility="gone"
            android:id="@+id/tv_send_verification_email"
            style="@style/left_menu_tv_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_5"
            android:drawableLeft="@drawable/ic_email"
            android:textColor="@color/red"
            android:drawablePadding="@dimen/height_20"
            android:drawableTint="@color/black"
            android:gravity="center|left"
            android:text="@string/update_email"
            app:ftype="regular" />


    </LinearLayout>


    </LinearLayout>

</ScrollView>
</LinearLayout>
